[project]
name = "ctxd"
version = "0.1.13"
description = "Python SDK and CLI for the ctxd platform."
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
ctxd = "ctxd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/ctxd"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/ctxd", "README.md"]

[tool.bumpversion]
current_version = "0.1.13"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = false
tag = false
allow_dirty = true
